--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,7 +34,17 @@
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
-
+  --el-color-primary: var(--vt-c-orange) !important;
+  --el-color-primary-light-1: rgba(252, 134, 44, 0.863) !important;
+    --el-color-primary-light-2: rgba(252, 134, 44, 0.815) !important;
+    --el-color-primary-light-3: rgba(252, 134, 44, 0.863) !important;
+    --el-color-primary-light-4: rgba(252, 134, 44, 0.863) !important;
+    --el-color-primary-light-5: rgba(253, 172, 111, 0.863) !important;
+    --el-color-primary-light-6: rgba(249, 193, 151, 0.863) !important;
+    --el-color-primary-light-7: rgba(255, 222, 207, 0.863) !important;
+    --el-color-primary-light-8: rgba(254, 231, 213, 0.863) !important;
+    --el-color-primary-light-9: #fff4ec  !important;
+    --el-color-primary-dark-2: rgba(250, 126, 32, 0.863) !important;
   --section-gap: 160px;
 }
 
