--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-orange: rgba(253, 125, 27, 0.863);
+  --vt-c-orange: #fd7d1bdc;
   --vt-c-white: rgb(255, 251, 248);
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
